--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -10,7 +10,8 @@ License-File: LICENSE
 Description: Product profunctors
 
 library
-  build-depends:   base >= 4 && < 5, profunctors, contravariant
+  build-depends:   base >= 4 && < 5, profunctors >= 4.0 && < 4.1,
+                   contravariant >= 0.4 && < 0.5
   exposed-modules: Data.Profunctor.Product,
                    Data.Profunctor.Product.Flatten,
                    Data.Profunctor.Product.Tuples
