--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -14,6 +14,7 @@ library
                    contravariant >= 0.4 && < 0.5,
                    template-haskell
   exposed-modules: Data.Profunctor.Product,
+                   Data.Profunctor.Product.Default,
                    Data.Profunctor.Product.Flatten,
                    Data.Profunctor.Product.TH,
                    Data.Profunctor.Product.Tuples
