--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -1,12 +1,19 @@
-name:     product-profunctors
-version:  0.5
-synopsis: product-profunctors
-author:   Purely Agile
-build-type: Simple
-cabal-version: >= 1.2
-License:      OtherLicense
-License-File: LICENSE
-Description: Product profunctors
+name:          product-profunctors
+version:       0.5
+synopsis:      product-profunctors
+description:   Product profunctors
+homepage:      https://github.com/tomjaguarpaw/product-profunctors
+license:       BSD3
+license-File:  LICENSE
+author:        Purely Agile
+maintainer:    Purely Agile
+category:      Control, Category
+build-type:    Simple
+cabal-version: >= 1.6
+
+source-repository head
+  Type:     git
+  Location: https://github.com/tomjaguarpaw/product-profunctors
 
 library
   build-depends:   base >= 4 && < 5, profunctors >= 4.0 && < 4.3,
