--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -16,9 +16,10 @@ source-repository head
   Location: https://github.com/tomjaguarpaw/product-profunctors
 
 library
-  build-depends:   base >= 4 && < 5, profunctors >= 4.0 && < 4.3,
-                   contravariant >= 0.4 && < 1.3,
-                   template-haskell
+  build-depends:   base >= 4 && < 5
+                 , profunctors >= 4.0 && < 4.3
+                 , contravariant >= 0.4 && < 1.3
+                 , template-haskell
   exposed-modules: Data.Profunctor.Product,
                    Data.Profunctor.Product.Default,
                    Data.Profunctor.Product.Flatten,
