--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -9,7 +9,7 @@ author:        Purely Agile
 maintainer:    Purely Agile
 category:      Control, Category
 build-type:    Simple
-cabal-version: >= 1.6
+cabal-version: >= 1.8
 
 source-repository head
   Type:     git
@@ -26,3 +26,15 @@ library
                    Data.Profunctor.Product.TH,
                    Data.Profunctor.Product.Tuples
   ghc-options:     -Wall
+
+test-suite test
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  other-modules: CheckTypes,
+                 Definitions
+  hs-source-dirs: Test
+  build-depends:
+    base >= 4 && < 5,
+    profunctors,
+    product-profunctors
+  ghc-options: -Wall
