--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -29,6 +29,9 @@ library
                    Data.Profunctor.Product.Tuples
   ghc-options:     -Wall
 
+  if impl(ghc < 7.10)
+    build-depends: transformers >= 0.2 && < 0.6
+
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
