--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -10,14 +10,15 @@ author:        Purely Agile
 maintainer:    Purely Agile
 category:      Control, Category
 build-type:    Simple
-cabal-version: >= 1.8
-tested-with:   GHC==7.10.1, GHC==7.8.4, GHC==7.6.3
+cabal-version: >= 1.18
+tested-with:   GHC==8.0.1, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3
 
 source-repository head
   type:     git
   location: https://github.com/tomjaguarpaw/product-profunctors
 
 library
+  default-language: Haskell2010
   build-depends:   base >= 4.5 && < 5
                  , profunctors >= 4.0 && < 5.3
                  , contravariant >= 0.4 && < 1.5
@@ -39,6 +40,7 @@ library
     build-depends: transformers >= 0.2 && < 0.6
 
 test-suite test
+  default-language: Haskell2010
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules: CheckTypes,
