--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -37,7 +37,7 @@ library
   ghc-options:     -Wall
 
   if impl(ghc < 7.10)
-    build-depends: transformers >= 0.2 && < 0.6
+    build-depends: transformers >= 0.2 && < 0.6, void >= 0.4 && < 0.8
 
 test-suite test
   default-language: Haskell2010
