--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -21,6 +21,7 @@ library
   default-language: Haskell2010
   build-depends:   base >= 4.5 && < 5
                  , profunctors >= 4.0 && < 5.3
+                 , bifunctors    >= 5.4 && < 6.0
                  , contravariant >= 0.4 && < 1.5
                  , tagged >= 0.0 && < 1
                  , template-haskell
