--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -47,7 +47,8 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules: CheckTypes,
-                 Definitions
+                 Definitions,
+                 DefinitionsUndecidable
   hs-source-dirs: Test
   build-depends:
     base >= 4 && < 5,
