--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -55,3 +55,14 @@ test-suite test
     profunctors,
     product-profunctors
   ghc-options: -Wall
+
+benchmark bench
+  default-language: Haskell2010
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: Bench
+  build-depends:
+    base >= 4 && < 5,
+    criterion,
+    deepseq,
+    product-profunctors
