--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -4,6 +4,7 @@ version:       0.8.0.3
 synopsis:      product-profunctors
 description:   Product profunctors
 homepage:      https://github.com/tomjaguarpaw/product-profunctors
+bug-reports:   https://github.com/tomjaguarpaw/product-profunctors/issues
 license:       BSD3
 license-file:  LICENSE
 author:        Purely Agile
@@ -11,11 +12,11 @@ maintainer:    Purely Agile
 category:      Control, Category
 build-type:    Simple
 cabal-version: >= 1.18
-tested-with:   GHC==8.0.1, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3
+tested-with:   GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3
 
 source-repository head
   type:     git
-  location: https://github.com/tomjaguarpaw/product-profunctors
+  location: https://github.com/tomjaguarpaw/product-profunctors.git
 
 library
   default-language: Haskell2010
