--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -13,6 +13,9 @@ category:      Control, Category
 build-type:    Simple
 cabal-version: >= 1.18
 tested-with:   GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3
+extra-doc-files:
+    README.md
+    CHANGELOG.md
 
 source-repository head
   type:     git
