--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -27,6 +27,7 @@ library
                  , profunctors   >= 5   && < 5.3
                  , bifunctors    >= 5.4 && < 6.0
                  , contravariant >= 0.4 && < 1.5
+                 , adjunctions   >= 4.0 && < 5.0
                  , tagged >= 0.0 && < 1
                  , template-haskell
   exposed-modules: Data.Profunctor.Product,
