--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -2,7 +2,7 @@ name:          product-profunctors
 copyright:     Copyright (c) 2013, Karamaan Group LLC; 2014-2018 Purely Agile Limited
 version:       0.10.0.0
 synopsis:      product-profunctors
-description:   Product profunctors
+description:   Product profunctors and tools for working with them
 homepage:      https://github.com/tomjaguarpaw/product-profunctors
 bug-reports:   https://github.com/tomjaguarpaw/product-profunctors/issues
 license:       BSD3
