--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -12,7 +12,7 @@ maintainer:    Purely Agile
 category:      Control, Category
 build-type:    Simple
 cabal-version: >= 1.18
-tested-with:   GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3
+tested-with:   GHC==8.4.3, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3
 extra-doc-files:
     README.md
     CHANGELOG.md
