--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -1,5 +1,5 @@
 name:          product-profunctors
-copyright:     Copyright (c) 2013, Karamaan Group LLC; 2014-2018 Purely Agile Limited
+copyright:     Copyright (c) 2013, Karamaan Group LLC; 2014-2018 Purely Agile Limited; 2019 Tom Ellis
 version:       0.10.0.0
 synopsis:      product-profunctors
 description:   Product profunctors and tools for working with them
