--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 sudo: required
 
 env:
-- GHCVER=7.6.3
-- GHCVER=7.8.4
 - GHCVER=7.10.3
 - GHCVER=8.0.2
 - GHCVER=8.2.2
-- GHCVER=8.4.3
-- GHCVER=8.6.1
+- GHCVER=8.4.4
+- GHCVER=8.6.5
+- GHCVER=8.8.1
 - GHCVER=head
 
 script:
-- curl -sSL https://raw.github.com/tomjaguarpaw/neil/stable3/travis.sh | sh -s tomjaguarpaw stable3
+- curl -sSL https://raw.github.com/tomjaguarpaw/neil/4ab6ea4/travis.sh | sh -s tomjaguarpaw 4ab6ea4
