--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -29,6 +29,7 @@ library
                  , contravariant >= 0.4 && < 1.6
                  , tagged >= 0.0 && < 1
                  , template-haskell
+                 , th-abstraction >= 0.4
   exposed-modules: Data.Profunctor.Product,
                    Data.Profunctor.Product.Adaptor
                    Data.Profunctor.Product.Default,
