--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        ghc: ['8.10', '8.8', '8.6', '8.4', '8.2', '8.0']
+        ghc: ['9.0', '8.10', '8.8', '8.6', '8.4', '8.2', '8.0']
         include:
         - os: windows-latest
         - os: macOS-latest
@@ -19,7 +19,7 @@ jobs:
     steps:
     - run: git config --global core.autocrlf false
     - uses: actions/checkout@v2
-    - uses: actions/setup-haskell@v1
+    - uses: haskell/actions/setup@v1
       id: setup-haskell
       with:
         ghc-version: ${{ matrix.ghc }}
@@ -29,7 +29,7 @@ jobs:
         path: ${{ steps.setup-haskell.outputs.cabal-store }}
         key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
         restore-keys: ${{ runner.os }}-${{ matrix.ghc }}-
-    - uses: tomjaguarpaw/neil@stable10
+    - uses: tomjaguarpaw/neil@tag-ced58ac
       with:
         github-user: tomjaguarpaw
-        branch: stable10
+        branch: tag-ced58ac
