--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -11,7 +11,7 @@ author:        Purely Agile
 maintainer:    Purely Agile
 category:      Control, Category
 build-type:    Simple
-cabal-version: >= 1.18
+cabal-version: 1.18
 tested-with:   GHC==8.10, GHC==8.8, GHC==8.6, GHC==8.4, GHC==8.2, GHC==8.0
 extra-doc-files:
     README.md
