--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        ghc: ['9.0', '8.10', '8.8', '8.6', '8.4', '8.2', '8.0']
+        ghc: ['9.2', '9.0', '8.10', '8.8', '8.6', '8.4', '8.2', '8.0']
         include:
         - os: windows-latest
         - os: macOS-latest
@@ -29,7 +29,7 @@ jobs:
         path: ${{ steps.setup-haskell.outputs.cabal-store }}
         key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
         restore-keys: ${{ runner.os }}-${{ matrix.ghc }}-
-    - uses: tomjaguarpaw/neil@tag-ced58ac
+    - uses: tomjaguarpaw/neil@tag-f72b0d2
       with:
         github-user: tomjaguarpaw
-        branch: tag-ced58ac
+        branch: tag-f72b0d2
