--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -12,7 +12,7 @@ maintainer:    Purely Agile
 category:      Control, Category
 build-type:    Simple
 cabal-version: 1.18
-tested-with:   GHC==9.0, GHC==8.10, GHC==8.8, GHC==8.6, GHC==8.4, GHC==8.2, GHC==8.0
+tested-with:   GHC==9.2, GHC==9.0, GHC==8.10, GHC==8.8, GHC==8.6, GHC==8.4, GHC==8.2, GHC==8.0
 extra-doc-files:
     README.md
     CHANGELOG.md
