--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -23,13 +23,13 @@ source-repository head
 
 library
   default-language: Haskell2010
-  build-depends:   base >= 4.5 && < 5
+  build-depends:   base >= 4.5 && < 4.17
                  , profunctors   >= 5   && < 5.7
                  , bifunctors    >= 5.4 && < 6.0
                  , contravariant >= 0.4 && < 1.6
                  , tagged >= 0.0 && < 1
-                 , template-haskell
-                 , th-abstraction >= 0.4
+                 , template-haskell < 2.19
+                 , th-abstraction >= 0.4 && < 0.5
   exposed-modules: Data.Profunctor.Product,
                    Data.Profunctor.Product.Adaptor
                    Data.Profunctor.Product.Default,
