--- a/product-profunctors.cabal
+++ b/product-profunctors.cabal
@@ -12,7 +12,7 @@ maintainer:    Purely Agile
 category:      Control, Category
 build-type:    Simple
 cabal-version: 1.18
-tested-with:   GHC==9.2, GHC==9.0, GHC==8.10, GHC==8.8, GHC==8.6, GHC==8.4, GHC==8.2, GHC==8.0
+tested-with:   GHC==9.6, GHC==9.4, GHC==9.2, GHC==9.0, GHC==8.10, GHC==8.8
 extra-doc-files:
     README.md
     CHANGELOG.md
@@ -23,12 +23,12 @@ source-repository head
 
 library
   default-language: Haskell2010
-  build-depends:   base >= 4.5 && < 4.17
+  build-depends:   base >= 4.5 && < 4.19
                  , profunctors   >= 5   && < 5.7
                  , bifunctors    >= 5.4 && < 6.0
                  , contravariant >= 0.4 && < 1.6
                  , tagged >= 0.0 && < 1
-                 , template-haskell < 2.19
+                 , template-haskell < 2.21
                  , th-abstraction >= 0.4 && < 0.5
   exposed-modules: Data.Profunctor.Product,
                    Data.Profunctor.Product.Adaptor
